# entity-linkings

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
appendix/: get_wikimap.py
appendix/data_convert/: ace2004.py  aida.py  aquaint.py  derczynski.py  docred.py  download_zelda_mention_counter.py  kilt.py  kore50.py  msnbc.py  n3.py  oke2015.py  oke2016.py  reddit_el.py  shadowlink.py  tweeki.py  unseen.py  utils.py  wned.py  zelda.py  zeshel.py
assets/: dataset_toy.jsonl  dataset_toy_wo_candidates.jsonl  dictionary_toy.jsonl  mention_counter_toy.json  train_zelda_toy.jsonl
entity_linkings/: __init__.py  pipeline.py  pipeline_test.py  trainer.py  utils.py
entity_linkings/candidate_reranker/: __init__.py  base.py  utils.py
entity_linkings/candidate_reranker/chatel/: __init__.py  chatel.py  chatel_test.py  gpt.py  utils.py
entity_linkings/candidate_reranker/crossencoder/: __init__.py  collator.py  collator_test.py  crossencoder.py  crossencoder_test.py  encoder.py  encoder_test.py
entity_linkings/candidate_reranker/extend/: __init__.py  collator.py  collator_test.py  extend.py  extend_test.py  preprocessor.py  preprocessor_test.py  utils.py  utils_test.py
entity_linkings/candidate_reranker/fevry/: collator.py  collator_test.py  fevry.py  fevry_test.py  span_classifier.py  span_classifier_test.py
entity_linkings/candidate_reranker/fusioned/: __init__.py  collator.py  collator_test.py  fusioned.py  fusioned_test.py  preprocessor.py  preprocessor_test.py  reader.py  reader_test.py
entity_linkings/candidate_retriever/: __init__.py  base.py  base_test.py  collator.py  collator_test.py
entity_linkings/candidate_retriever/bm25/: __init__.py  bm25.py  bm25_test.py  indexer.py  indexer_test.py
entity_linkings/candidate_retriever/dualencoder/: __init__.py  dualencoder.py  dualencoder_test.py  encoder.py  encoder_test.py  indexer.py  indexer_test.py  preprocessor.py
entity_linkings/candidate_retriever/e5bm25/: e5bm25.py  e5bm25_test.py
entity_linkings/candidate_retriever/prior/: __init__.py  indexer.py  indexer_test.py  prior.py  prior_test.py
entity_linkings/candidate_retriever/textembedding/: __init__.py  encoder.py  encoder_test.py  preprocessor.py  textembedding.py  textembedding_test.py
entity_linkings/cli/: build_index.py  evaluate.py  evaluate_pipeline.py  evaluate_reranker.py  evaluate_retrieval.py  gen_default_config.py  run.py  run_pipeline.py  train.py  train_reranker.py  train_retrieval.py
entity_linkings/data_utils/: __init__.py  collator.py  collator_test.py  entity_dictionary.py  entity_dictionary_test.py  preprocessor.py  preprocessor_test.py  utils.py  utils_test.py
entity_linkings/dataset/: __init__.py  entity_linkikngs_hub.py  utils.py
entity_linkings/dataset/ace2004/: __init__.py  ace2004.py
entity_linkings/dataset/aquaint/: __init__.py  aquaint.py
entity_linkings/dataset/derczynski/: __init__.py  derczynski.py
entity_linkings/dataset/docred/: __init__.py  docred.py
entity_linkings/dataset/kilt/: __init__.py  kilt.py
entity_linkings/dataset/kore50/: __init__.py  kore50.py
entity_linkings/dataset/meantime/: meantime.py
entity_linkings/dataset/msnbc/: __init__.py  msnbc.py
entity_linkings/dataset/n3/: __init__.py  n3.py
entity_linkings/dataset/oke/: __init__.py  oke.py
entity_linkings/dataset/reddit/: __init__.py  reddit.py
entity_linkings/dataset/shadowlink/: __init__.py  shadowlink.py
entity_linkings/dataset/tweeki/: __init__.py  tweeki.py
entity_linkings/dataset/unseen/: __init__.py  unseen.py
entity_linkings/dataset/wned/: __init__.py  wned.py
entity_linkings/dataset/zelda/: __init__.py  zelda.py
entity_linkings/dataset/zeshel/: __init__.py  zeshel.py
entity_linkings/entity_dictionary/: __init__.py  base.py  base_test.py
entity_linkings/entity_dictionary/kilt_wiki/: __init__.py  kilt_wiki.py
entity_linkings/models/: __init__.py  base.py  base_test.py  utils.py  utils_test.py
(+48 files in other folders)
