[project]
name = "entity-linking-benchmark"
version = "0.1.0"
description = "A Library for Entity Linking benchmarking"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "bm25s[full]>=0.2.14",
    "datasets>=4.0.0",
    "faiss-cpu>=1.12.0",
    "openai>=2.8.1",
    "protobuf>=6.32.0",
    "rdflib>=7.3.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "transformers[torch]>=4.55.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.1",
]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.2.3",
]

[tool.coverage.run]
omit = ["*_test.py"]

[tool.pytest.ini_options]
testpaths = ["*_test.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
markers = [
    "span_retrieval_dual_encoder: Test for SpanEntityRetrievalForDualEncoder",
    "span_retrieval_text_embedding: Test for SpanEntityRetrievalForTextEmbedding",
    "span_retrieval_bm25: Test for BM25",
    "span_retrieval_e5bm25: Test for E5BM25",
    "disambiguate_fevry: Test for FEVRY",
    "disambiguate_blink: Test for BLINK",
    "disambiguate_chatel: Test for ChatEL",
    "disambiguate_fusioned: Test for FUSIONED",
    "disambiguate_extend: Test for EXTEND",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entity_linkings"]

[project.scripts]
entitylinkings-train = "entity_linkings.cli.train:cli_main"
entitylinkings-train-retrieval = "entity_linkings.cli.train_retrieval:cli_main"
entitylinkings-eval = "entity_linkings.cli.evaluate:cli_main"
entitylinkings-eval-retrieval = "entity_linkings.cli.evaluate_retrieval:cli_main"
entitylinkings-run = "entity_linkings.cli.run:cli_main"
entitylinkings-gen-config = "entity_linkings.cli.gen_default_config:cli_main"
