[project]
name = "entity-linkings"
version = "0.1.1"
description = "A unified library for Entity Linking"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "bm25s>=0.2.14",
    "datasets>=4.0.0",
    "duckdb>=1.4.3",
    "faiss-cpu>=1.12.0",
    "openai>=2.8.1",
    "protobuf>=6.32.0",
    "rdflib>=7.3.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "transformers[torch](>=4.55.4,<5.0.0)",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.1",
]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.2.3",
]

[tool.coverage.run]
omit = ["*_test.py"]

[tool.pytest.ini_options]
testpaths = ["*_test.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
markers = [
    "retriever_dual_encoder: Test for DualEncoder",
    "retriever_text_embedding: Test for TextEmbedding",
    "retriever_bm25: Test for BM25",
    "retriever_prior: Test for PriorBasedRetriever",
    "retriever_e5bm25: Test for E5BM25",
    "reranker_fevry: Test for FEVRY",
    "reranker_crossencoder: Test for Cross Encoder",
    "reranker_chatel: Test for ChatEL",
    "reranker_fusioned: Test for FUSIONED",
    "reranker_extend: Test for EXTEND",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entity_linkings"]

[project.scripts]
entitylinkings-train-retrieval = "entity_linkings.cli.train_retrieval:cli_main"
entitylinkings-train-reranker = "entity_linkings.cli.train_reranker:cli_main"
entitylinkings-eval-retrieval = "entity_linkings.cli.evaluate_retrieval:cli_main"
entitylinkings-eval-reranker = "entity_linkings.cli.evaluate_reranker:cli_main"
entitylinkings-run-pipeline = "entity_linkings.cli.run:cli_main"
entitylinkings-eval-pipeline = "entity_linkings.cli.evaluate_pipeline:cli_main"
entitylinkings-build-index = "entity_linkings.cli.build_index:cli_main"
entitylinkings-gen-config = "entity_linkings.cli.gen_default_config:cli_main"
